--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -563,7 +563,8 @@ math: true
 
 错题：
 
-* 
+* 1
+  * 每个分支节点平衡因子为1的时候，高度最大，此时h层的平衡二叉树所需最少结点数应按递推式H(n)=H(n-1)+H(n-2)+1计算。(H1=1,H2=2)
 
 ## 5.22 平衡二叉树和存储系统
 
@@ -573,4 +574,4 @@ math: true
 
 错题：
 
-* 
+* 无
