--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -137,6 +137,12 @@ index_img: /img/1920x1080 (36).jpg
 * 选中的逻辑电路设计
   * 匹配成功得到信号1（比较器产生的信号），这个信号可以控制一个三态门，只有匹配的TLB寄存器才能被选通
   * 标记为和有效位再进行一个相与，然后把这个相与的信号作为刚才提到的这个TLB寄存器的三态门的选通信号，这就可以实现TLB的迅速并行比较，迅速获得想要的页框号
+* 查页表的时候有可能发生有效位为0的情况
+  * 有效位为0，说明这个页表一定是缺页的
+* 如果快表命中，快表的有效位等于1，标记位也可以匹配得上，不可能缺页
+  * 页面置换的时候，由一些页面可能被换到外存，换到外存之后，这个页面的有效位就从1修改为0，同时记录这个页面在外存当中存储的地址
+    * 操作系统同时也会通知CPU让他把这个页表项的有效位置为0，也就是说当页面换出的时候，TLB的表项肯定也会跟着一起失效
+  * 因此只要TLB命中一定不会缺页，TLB不命中查页表的时候，才有可能缺页
 
 #### 地址转换：全相联TLB未命中+查一级页表
 
@@ -161,36 +167,96 @@ index_img: /img/1920x1080 (36).jpg
 
 #### 地址转换：全相联TLB未命中+查二级页表
 
-![](F:\try\home\themes\fluid\source\img\00000000000007.png)
+![](/img/00000000000007.png)
 
 #### 地址转换：全相联TLB命中+不用查页表
 
-![](F:\try\home\themes\fluid\source\img\00000000008.png)
+![](/img/00000000008.png)
 
 #### 地址转换：4路组相联TLB命中+不用查页表
 
-![](F:\try\home\themes\fluid\source\img\000000000009.png)
+![](/img/000000000009.png)
+
+* 对TLB的表项进行分组，x路组相联就是x个页表项一组
+* 对虚拟页号进行拆分，如果有2^n个TLB组，则组号占n位，在地址低位，剩余的地址高位是TLB标记
+  * 如果采用全相联映射，则TLB标记页虚拟页号完全已知，如果是组相联，则是排除组号的地址高位
 
 #### 访问物理地址：全相联Cache命中+不用访问主存
 
-![](F:\try\home\themes\fluid\source\img\0000000000010.png)
+![](/img/0000000000010.png)
+
+* 得到了物理地址说明页面一定已经在内存里了
+  * 如果页面不在内存里会发生缺页，并且调页，然后再进行一次地址转换
+* 如果没有Cache，直接根据这个物理地址，直接根据MAR指明的地址，直接去访问内存，读出这个地址对应的数据
+* 根据Cache的映射方式的不同，要对物理地址进行不同的拆分
+  * 全相联映射
+    * 没有行号也没有组号，直接Cache标记和每一个Cache行的标记进行对比
+    * Cache块的大小转为2^nB，然后n就是字块内地址所占的位数也就是最后n位，剩余的高位就是Cache块的标记
+    * 用Cache标记去和Cache里面的Cache行进行比较，如果能完全匹配并且有效位为1
+  * 直接相联映射
+    * 有行号
+    * 相当于1路组相联映射
+    * 拆分成三个结构
+      * 字块内地址，同上
+      * 行号，看直接映射的情况下整个Cache有多少行，然后转化为2^n行，n就是行号所占的地址数量，位于中间
+      * Cache标记，除了行号和字块内地址以外的最高位
+  * 组相联映射
+    * 有组号
+* 访问到的数据会存储到MDR当中，然后MDR再把这个数据给到CPU，如果是指令，会放到IR指令寄存器当中，如果是数据，则可能放到CPU的某个通用寄存器当中
+* Cache块的大小和页的大小不一样的
+  * 408里面一个内存块的大小等于一个Cache块的大小
+  * Cache块的大小一般来说要远远小于一个页的大小
 
 #### 访问物理地址：全相联Cache未命中+访问主存
 
-![](F:\try\home\themes\fluid\source\img\00000000011.png)
+![](/img/00000000011.png)
+
+* Cache标记位匹配不上和匹配上了但是有效位为0都是Cache未命中的情况
 
 #### 访问物理地址：直接映射Cache命中+不用访问主存
 
-![](F:\try\home\themes\fluid\source\img\00000000012.png)
+![](/img/00000000012.png)
+
+* 直接相联映射
+  * 有行号
+  * 拆分成三个结构
+    * 字块内地址，同上
+    * 行号，看直接映射的情况下整个Cache有多少行，然后转化为2^n行，n就是行号所占的地址数量，位于中间
+    * Cache标记，除了行号和字块内地址以外的最高位
+  * 根据行号找到对应的行，行号匹配以后去对比Cache标记，如果Cache标记匹配+有效位为1，那么Cache命中，可以直接从Cache块中根据字块内地址读取数据，读到MDR当中
 
 #### 访问物理地址：直接映射Cache未命中+访问主存
 
-![](F:\try\home\themes\fluid\source\img\00000013.png)
+![](/img/00000013.png)
 
 #### 访问物理地址：2路组相联Cache命中+不用访问主存
 
-![](F:\try\home\themes\fluid\source\img\00000000014.png)
+![](/img/00000000014.png)
+
+* 组相联映射
+  * 有组号
+  * x路组相联映射的意思是每组有X个Cache行
+  * Cache标记+组号+字块内地址
+    * 字块内地址同上
+    * 组号是一共有2^n组，组号占n位
+    * 剩余的高位是Cache标记
+* 根据组号找到对应的分组，然后对比组内各Cache行的Cache标记和地址的Cache标记，匹配上以后对比有效位
+* Cache行和Cache块不是一个东西
+  * Cache行包括了Cache的标记位，有效位，替换位等辅助控制信息，再加上Cache块的数据，而Cache块指的就是主存数据的副本，也就是64B本身
 
 #### 访问物理地址：2路组相联Cache未命中+访问主存
 
-![](F:\try\home\themes\fluid\source\img\000000000015.png)
+![](/img/000000000015.png)
+
+### 三种映射方式的电路图
+
+![](/img/ifokdsajkfjose.png)
+
+* 图中中间的8个bit对应组号
+  * 组号连接的折线表示8个bit可以命中某一个分组，这一个分组当中包含了4个Cache行
+* 高22bit对应的是Cache的标记位
+  * 标记对应的折线，最下面连接了4个比较器（⭕+＝）（用异或门，非门实现的东西）
+  * 每一个Cache行当中都有tag标记位，每一个Cache行都会把这22个标记位和刚才我们要访问的这个物理地址的tag信息进行对比
+  * v是有效位，有效位和TLBCache行标记位和地址标记位比较的结果输入与门的两端进行相与，产生的结果输入到最末端的四路选择器（多路选择器）
+  * 四个Cache块的数据直接连到多路选择器当中，当上述步骤产生了1信号以后，会把对应Cache块的信号选通，让其通过多路选择器，然后就得到了一整个Cache块
+  * 这个Cache块结合字块内地址，就可以找到想要的数据
