--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -3,8 +3,8 @@ title: 计组强化大题
 date: 2025-05-22 20:42:08
 tags: 408日常
 sticky: 268
-banner_img: /img/1920x1080 (36).jpg
-index_img: /img/1920x1080 (36).jpg
+banner_img: /img/1920x1080 (37).jpg
+index_img: /img/1920x1080 (37).jpg
 ---
 
 ## 概览
@@ -260,3 +260,236 @@ index_img: /img/1920x1080 (36).jpg
   * v是有效位，有效位和TLBCache行标记位和地址标记位比较的结果输入与门的两端进行相与，产生的结果输入到最末端的四路选择器（多路选择器）
   * 四个Cache块的数据直接连到多路选择器当中，当上述步骤产生了1信号以后，会把对应Cache块的信号选通，让其通过多路选择器，然后就得到了一整个Cache块
   * 这个Cache块结合字块内地址，就可以找到想要的数据
+
+### 存储系统真题
+
+#### Cache的题目如何分析
+
+* 考法
+  * 虚拟地址转化为物理地址的过程
+    * 涉及TLB查快表
+    * 查慢表
+  * 通过物理地址去访问Cache的过程
+    * 静态分析
+      * Cache的地址结构（PA拆分）
+      * Cache行的完整构成
+        * TAG标记位
+        * 有效位
+        * 脏位
+        * LRU替换位
+        * 数据位（Cache块）
+    * 动态分析
+      * 物理地址访问序列
+        * Cache命中率
+          * 命中的地址，不命中的地址
+        * Cache的替换
+        * 直接给物理地址序列
+        * 数组元素访问（for循环）
+          * 把对数组元素的访问，转化成对物理地址的访问
+        * 以机器代码形式
+          * 哪些时候取指令，哪些时候访问数组数据
+
+![](/img/kdsacowe.png)
+
+##### 第一类题型：分析Cache的地址结构
+
+![](/img/satnbvt.png)
+
+* 类型
+  * 取决于映射方式
+  * 直接映射
+    * 三个部分
+    * TAG标记+行号+块内地址
+  * 组相联映射
+    * 三个部分
+    * TAG标记+组号+块内地址
+  * 全相联映射
+    * 两个部分
+    * TAG标记+块内地址
+* 读题的时候需要关注的条件
+  * 物理地址的位数（机器字长）
+  * Cache总行数
+    * =数据区大小/Cache块大小
+    * Cache数据区总大小是指Cache数据块大小之和，只包括数据部分
+    * Cache总容量（总大小）≠Cache数据区总容量
+    * 组数=Cache总行数/组相联路数
+  * Cache块大小
+    * 一般直接给出
+  * 映射方式
+    * 直接映射
+    * 组相联
+      * 关注路数，确定组数
+    * 全相联
+  * 先关注PA位数，再关注映射方式，接着关注Cache总行数和块大小，从后往前推，先确定块内地址，再确定行号和组号，最后确定TAG标记
+
+##### 第二类题型：Cache行的完整构成
+
+![](/img/zcjercoai.png)
+
+* 读题时需要关注的条件
+  * 物理地址位数
+  * Cache总行数
+  * Cache块大小
+  * 映射方式
+  * 写策略
+    * 直写法
+      * 修改Cache的同时页同步修改主存里的数据
+      * 不需要脏位
+    * 回写法
+      * 先修改Cache里面的副本数据，暂时不会修改主存里的数据，只有当数据块从Cache里面淘汰调回主存的时候，才把整个数据块写回到主存
+      * 需要1bit脏位
+  * 替换算法
+    * 随机算法
+      * 不需要替换位
+    * 其他
+      * 需要替换位，位数取决于替换的范围，2^n个中替换，需要nbit替换位
+        * 组相联=log2（路数）
+        * 直接映射不需要替换位
+      * 先进先出算法（FIFO）
+      * 近期最少使用算法（LRU）
+      * 最不经常使用算法（LFU)
+
+* 构成
+  * TAG
+    * Cache地址高标记位
+  * 有效位
+    * 一定存在
+    * 占1bit
+    * 如果发生进程切换，有效位会发生巨大的变化，意味着Cache里面这些主存的副本数据是上一个进程的数据，当我们切换一个进程的时候，这个新进程的数据副本和上一个进程肯定是不一样的，因此切换进程的时候需要把Cache的所有有效位置为0
+      * 一个软件刚开始的时候比较卡也是因为Cache最开始有效位全位0，Cache当中还没有填充进来，最开始一定会出现Cache缺失
+  * 块内数据
+    * 根据Cache块大小确定
+  * 脏位
+    * 写回法1bit
+    * 直写法0bit
+  * 替换信息位
+    * 随机替换0bit
+    * 其他 FIFO,LRU取决于范围
+      * 直接映射0bit
+      * 组相联log2路数bit
+      * 全相联log2行数bit
+        * 行数=Cache数据区总大小/Cache大小
+  * 组号和行号实际上是隐含的，不需要占任何的bit
+
+#### Cache大题实战
+
+##### 2020
+
+![](/img/ciawpeir.png)
+
+* 思路
+  * 主存地址32位→PA有32位
+  * 8路组相联映射方式
+  * 直写法
+  * LRU替换算法
+  * 主存块大小64B
+  * 数据区容量32KB
+    * 由主存块和数据区容量可以推出Cache总行数
+  * 第一小问：Cache行的完整构成
+  * 第二小问：动态分析PA访问序列，Cache命中率
+    * 变量k分配在寄存器里面
+      * 不用考虑变量k的访存，不涉及Cache的访问
+    * 起始地址+数组
+      * 告诉即将要访问的地址是哪几个
+    * 主存块大小
+      * 除了末尾的6bit之外，高位相同意味着这几个地址都从属于同一个Cache块
+        * 第一次访问存在Cache缺失，之后Cache块被调入，之后访问同一块数据不会缺失
+  * 第三小问：CPU访问Cache的操作
+    * 根据映射方式拆分PA
+    * 如果是直接映射，找到对应行号，组相联找到对应组号
+    * 对比TAG标记位
+    * 匹配上后检查有效位
+    * 如果上述都匹配，命中
+    * 缺失的话会把对应的主存块读到Cache里面，修改Cache行内部的tag标记有效位和LRU替换算法位，还有脏位
+
+##### 2010
+
+![](/img/eahrae.png)
+
+![](/img/awheew.png)
+
+* 条件
+  * 主存地址空间大小256MB
+    * 28bit
+  * 8个Cache行，每个Cache行大小64B
+    * 行号3bit，块内地址6bitt
+  * 直接映射方式
+  * int32位补码表示
+    * 4B
+  * i、j、sum分配在寄存器中
+    * 三个变量不会涉及Cache访存
+  * 数组a按行优先方式存放
+    * 行遍历顺序
+  * 首地址320
+* 思路
+  * 第一小问：Cache的总容量
+  * 第二小问：访问的地址
+    * 十进制转二进制，然后取出对应的位数
+  * 第三小问：访问命中率
+
+##### 2018
+
+![](/img/opiaow.png)
+
+![](/img/mzceoi.png)
+
+* 条件
+  * VA=20+12
+  * PA=20+3+5
+  * 全相联TLB
+  * 二级页表
+* 思路
+  * VA→PA→Cache
+  * PA分成三个部分→要么是组相联，要么是直接映射
+  * 一个组号指向两个Cache行→组相联映射
+
+##### 2023
+
+![](/img/aefwc.png)
+
+![](/img/dsafawef.png)
+
+#### TLB的题目如何分析
+
+![](/img/ucpwiqeuor.png)
+
+* 关注
+  * VA多少位，虚页号多少位？
+    * 页号+页内地址
+  * TLB的映射方式
+    * 全相联
+    * 组相联映射
+      * k路
+    * 直接相联很容易出现抖动现象，效率低，一般不出现
+  * 替换算法
+    * 同Cache
+    * 可能出现替换信息位
+* 所有涉及到TLB的题目，一定要关注虚页号如何拆分的问题
+* 每个TLB行（表项）完整构成：
+  * TAG
+    * 组相联
+      * 虚页号除了末尾log2（组数）的最高位
+    * 全相联
+      * 虚页号
+  * 有效位
+    * 一定存在1bit
+  * 页框号
+    * 看页框数量（物理页框，要拼接在页内偏移量前面形成PA的）
+  * 替换信息位
+    * 看TLB替换算法
+      * 随机
+        * 0bit
+      * 其他
+        * 组相联
+          * log2（路数）
+        * 全相联
+          * log2（总行数）
+
+#### TLB大题实战
+
+![](/img/aweebwrrr.png)
+
+* 条件
+  * VA30bit
+  * 页大小4KB→12bit页内偏移量
+  * 总共八组→组号3bit
