--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -493,3 +493,568 @@ index_img: /img/1920x1080 (37).jpg
   * VA30bit
   * 页大小4KB→12bit页内偏移量
   * 总共八组→组号3bit
+
+## 数据的表示和运算
+
+![](/img/vweqwe.png)
+
+![](/img/ngsddfasf.png)
+
+![](/img/dsafwec.png)
+
+* 数据的表示和运算往往还会和指令的运行过程结合起来考察
+
+### 大纲
+
+* 数制与编码
+
+  * 进位计数制及其相互转换
+    * 二进制、八进制、十进制、十六进制之间的转换
+    * 二、八、十六之间的转换很简单
+      * 八→3个bit，十六→4个bit
+    * 二转十
+      * 根据每位权值展开即可
+    * 十转二
+      * 好拼凑的
+        * 拼凑法
+      * 不好拼凑的
+        * 整数部分
+          * 除基取余法
+            * 结果从后往前
+        * 小数部分
+          * 乘基取整法
+            * 结果从前往后
+  * 定点数的编码表示
+    * 无符号数的表示
+      * 重点关注无符号数的“减法“如何实现，以及无符号数加法/减法的溢出判断
+        * 无符号数的加法直接加
+        * 减法被减数不变，减数按位取反+1
+          * A-B都是转为加法，A+(B取反末位+1)
+        * CF标志位
+    * 带符号整数的表示
+      * 原
+      * 反
+      * 补
+        * 重点关注补码的”减法“如何实现，以及补码加法/减法的溢出判断
+          * A-B都是转为加法，A+(B取反末位+1)
+      * 移
+        * 注意偏移量是多少
+    * 定点小数
+      * 仅用于浮点数尾数，关注加减法即可
+
+* 运算方法和运算电路
+
+  * 基本运算部件
+
+    * 加法器
+
+      * 一位全加器
+
+      ![](/img/202332.jpg)
+
+      * 串行进位加法器
+
+      ![](/img/02631.jpg)
+
+      * 并行进位加法器
+
+      ![](/img/202551.jpg)
+
+      * 带标志加法器
+
+      ![](/img/202510.jpg)
+
+    * 算术逻辑部件（ALU）
+
+    ![](/img/202743.jpg)
+
+  * 加减运算
+
+    * 补码加/减运算器
+
+    * 标志位的生成
+
+      ![](/img/224508.jpg)
+
+      * CF
+      * SF
+      * ZF
+      * OF
+
+  * 乘除运算
+
+    * 乘除运算的基本原理
+    * 乘除电路和除法电路的基本结构
+
+* 整数的表示和运算
+
+  * 无符号整数的表示和运算
+    * 表示
+    * 运算
+      * 加、减、乘、除
+      * 溢出判断
+  * 带符号整数的表示和运算
+    * 表示
+      * 原、反、补、移
+      * 除了浮点数的尾数之外，所有的带符号数肯定都是用补码来表示的
+    * 运算（仅关注补码即可）
+      * 加减乘除
+      * 溢出判断
+
+* 浮点数的表示和运算
+
+  * 浮点数的表示：IEEE754标准（只需要掌握该标准，非IEEE754标准的可以不管了）
+    * 结构：符号位+阶码+尾数
+    * float：1+8+23
+    * double：1+11+52
+    * long double ：1+15+64
+  * 浮点数的加减运算
+    * 对阶：小阶向大阶看齐
+    * 尾数加减：原码定点数的加减法
+      * 机器级别的实现上最终还是会变成补码的加减运算
+    * 规格化：位数规格化为1.xxxx的形式
+      * 尾数每左规一位，阶码-1
+      * 尾数每右规一位，阶码+1
+    * 舍入：尾数右规时，可能导致精度丢失，需考虑舍入问题
+    * 判溢出
+      * 尾数右规时，阶码超出可表示的最大值，上溢——发生溢出异常
+        * 如果浮点数的加减运算有溢出的话，OF标志位会等于1
+      * 尾数左规时，阶码低于可表示的最小值，下溢——当做机器0处理
+
+### 考法
+
+* 有符号数和无符号数，长数和短数，整数和浮点数的类型转换
+* 结合C语言程序，分析”数据的表示和运算“
+  * 常规考法
+* 结合机器级代码（通常也会给出对应的C语言程序），分析”数据的标识和运算“在指令运行过程中的作用
+  * 加减运算在”条件转移类指令”中的运用
+
+### 大题重点关注
+
+#### 数据的表示
+
+![](/img/04717.jpg)
+
+* C语言常见整数类型
+  * 无符号整数
+    * unsigned short
+    * unsigned int
+    * unsigned后面没有跟int还是short就默认int
+  * 带符号整数
+    * short
+    * int
+  * 记住16位表示范围
+    * 2^16=65536
+    * 2^15=32768
+    * 带符号short→-32768~32767
+    * 无符号unsigned short→0~65535
+    * 加减溢出的快速判断
+      * 十进制算结果超出表示范围一定溢出
+* IEEE754浮点数
+  * 结构：符号位+阶码+尾数
+    * float：1+8+23
+    * double：1+11+52
+    * long double：1+15+64
+* C语言数据类型转换
+  * 整数之间的转换
+    * 长短相同
+      * 机器数不变，解释方式改变（带符号整数、无符号整数）
+    * 短变长
+      * 先扩展（无符号整数零扩展、带符号整数符号扩展），再解释
+    * 长变短
+      * 先截断（留低位），再解释
+  * 整数和浮点数之间的转换
+    * 整数转浮点数
+      * 写出人类视角的科学计数法1.xxxx，再转为浮点数，截断尾部时采用0舍1入原则
+      * 注意：精度丢失问题
+    * 浮点数转整数
+      * 写出二进制小数，去掉小数部分，整数部分保留更低的位数
+      * 注意：溢出问题、精度丢失（小数点后的部分）
+
+#### 数据的运算
+
+* 加减法
+
+  ![](/img/12412.jpg)
+
+  * 无符号整数
+    * 加法规则
+      * 机算
+        * 按位相加
+      * 手算
+        * 代入十进制机算
+    * 减法规则
+      * 机算
+        * 减数按位取反末位加1，减法变加法
+      * 手算
+        * 代入十进制计算
+    * 溢出问题
+      * 手算
+        * 判断加减法的结果是否超出无符号数合法范围
+      * 机算
+        * 根据CF标志位判断，CF=最高位产生的进位 ⊕ SUB（减1加0）
+  * 带符号整数
+    * 加法规则
+      * 机算
+        * 按位相加
+      * 手算
+        * 代入十进制计算
+    * 减法规则
+      * 机算
+        * 减数按位取反末尾加一，减法变加法
+      * 手算
+        * 代入十进制计算
+    * 溢出问题
+      * 手算
+        * 判断加减法的结果是否超出带符号数合法范围
+      * 机算
+        * 根据OF标志位判断，OF=最高位产生的进位 ⊕ 次高位产生的进位
+  * IEEE754浮点数
+    * 小题考察居多
+  * 什么时候用手算，什么时候用计算
+    * 优先手算，溢出的时候机算
+
+* 乘法
+
+  ![](/img/12452.jpg)
+
+  * 无符号整数
+    * 机算
+      * 注意：可用逻辑左移代替*2
+        * 逻辑左移，低位补0，高位直接移出去，逻辑右移，低位直接移出去，高位补0
+    * 溢出判断
+      * n位*n位，若用2n位保存乘积，则不会溢出
+      * n位*n位，若用2n位保存中间结果，最后截取末尾n位作为最终的乘积，可能会溢出
+        * 手算判溢出
+          * 代入十进制计算乘法结果，判断该结果是否超出了n位“无符号数”所能表示的范围，若超出，则溢出
+        * 机器判溢出
+          * 两个无符号数乘法：n位*n位，用2n位保存中间结果，仅当前n位都是0时，不溢出
+  * 带符号整数
+    * 机算
+      * 注意：可用算术左移代替*2
+        * 算术左移，低位补0，高位直接移出去，算术右移，低位丢弃，高位补符
+    * 溢出判断
+      * n位*n位，若用2n位保存乘积，则不会溢出
+      * n位*n位，若用2n位保存中间结果，最后截取末尾n位作为最终的乘积，可能会溢出
+        * 手算判溢出
+          * 代入十进制计算乘法结果，判断该结果是否超出了n位“无符号数”所能表示的范围，若超出，则溢出
+        * 机器判溢出
+          * 两个有符号补码乘法：n位*n位，用2n位保存中间结果。仅当前n+1位全0或者全1时，不溢出
+
+* 除法
+
+  ![](/img/21037.jpg)
+
+  * 无符号整数
+    * 机算
+      * 可用逻辑右移替代/2
+  * 带符号整数
+    * 机算
+      * 可用算术右移代替/2
+  * 408考试中除法不可能溢出，只丢失精度
+
+### 常见的难点
+
+#### 无符号数的加法、减法怎么算
+
+![](/img/059.jpg)
+
+* 在硬件看来，对无符号数的加减法、对有符号补码的加减法都是一样的计算方法
+
+  ![](/img/164452.jpg)
+
+  * 共用同一套电路
+
+* 加法：直接N bit二进制按位相加
+
+* 减法：计算”A-B“可转化为等价的加法——将B的N bit全部按位取反末位+1，然后与A相加
+
+#### 遇到乘法怎么算
+
+![](/img/21108.jpg)
+
+* 通常可代入十进制手算
+* 408大纲不要求掌握浮点数乘法
+
+#### 遇到除法怎么算
+
+![](/img/221116.jpg)
+
+* 通常可代入十进制手算
+* 408大纲不要求掌握浮点数除法
+
+#### 溢出怎么判断
+
+![](/img/21139.jpg)
+
+* 加法/减法
+  * 手算判溢出
+    * 代入十进制计算结果，判断该结果是否超出了n位所能表示的范围，若超出，则溢出
+  * 机器判溢出
+    * 无符号数加/减：运算后若CF=1，则溢出；若CF=0，则不溢出
+* 乘法
+  * n位*n位，若用2n位保存乘积，则不会溢出
+  * n位*n位，用2n位保存中间结果，最后截取末尾n位作为最终的乘积，可能会溢出
+    * 手算判溢出
+      * 代入十进制计算乘法结果，判断该结果是否超出了n位所能表示的范围，若超出，则溢出
+    * 机器判溢出
+      * 两个无符号数乘法：n位*n位，用2n位保存中间结果。仅当前n位都是0时，才不溢出
+      * 两个有符号补码乘法：n位*n位，用2n位保存中间结果。仅当前n+1位全1或全0时，不溢出
+
+#### 精度丢失怎么判断
+
+![](/img/221153.jpg)
+
+* 浮点数的精度：看尾数的位数
+  * 单精度浮点型float
+    * 尾数位数位23+1bit。因此数值部分可以表示24bit的精度
+  * 双精度浮点型double
+    * 尾数位数位52+1bit。因此数值部分可表示53bit的精度
+  * 临时浮点数long double
+    * 尾数位数位64+1bit。因此数值部分可表示65bit的精度
+  * 注：IEEE754标准中，尾数是规格化的，隐含了一个最高位的1
+* 定点整数的精度：看数值位的位数
+  * 16位short型
+    * 数值部分的精度为15bit
+  * 32位int型
+    * 数值部分的精度为31bit
+  * 32位unsigned int型
+    * 数值部分精度为32bit
+  * 64位long型
+    * 数值部分的精度为63bit
+* 整数转浮点数
+  * 数值部分精度更高的类型，转为数值部分精度更低的类型，就有可能发生精度丢失
+  * 如果整数的数值位的位数等于或者小于浮点数尾数位数，精度就不会丢失，如果整数的数值位的位数大于浮点数尾数位数，精度就会丢失
+  * 不会溢出
+* 浮点数转整数
+  * 如果浮点数有小数部分，则可能丢失精度
+
+#### 标志位怎么区分
+
+![](/img/21217.jpg)
+
+* CF
+  * 含义：进位/借位标志，表示无符号数的加减法是否发生了进位或借位。当CF=1时，说明无符号数的加减运算发生了进位或借位，也即发生了溢出
+  * 硬件的计算方法
+    * CF=最高位产生的进位 ⊕ SUB
+      * sub=1表示减法
+      * sub=1表示加法
+  * 注意：CF位对有符号数的加减法无意义
+* ZF
+  * 含义
+    * 表示运算的结果是否为0。ZF=1表示运算结果为0，ZF=0表示运算结果非0
+  * 硬件的计算方法
+    * 两个数的运算结果为n bit，只有n bit全为0时，ZF=1
+* OF
+  * 含义
+    * 有符号数的加减运算是否发生了溢出。OF=1时，说明发生了溢出
+  * 硬件的计算方法
+    * OF=最高位产生的进位⊕次高位产生的进位
+  * 注意：OF位对无符号数的加减法无意义
+* SF
+  * 含义
+    * 有符号数加减运算结果的正负性，SF=0表示运算结果为正数，SF=1表示运算结果为负数
+  * 硬件的计算方法
+    * SF=最高位的本位和
+  * 注意
+    * SF位对无符号数的加减法无意义
+
+## 指令的执行
+
+### 大纲
+
+* 指令系统的基本概念
+* 指令格式
+  * 指令的基本格式
+    * 操作码
+      * 指明了动作
+    * 操作数（可能有0~n个）
+      * 寻址方式
+        * 怎么找到这个操作数
+      * 形式地址
+        * 形式地址（需转成有效地址EA）
+        * 指令运行时需转成有效地址EA
+    * 根据指令长度是否固定不变，分为两类
+      * 定长指令字
+        * 每次PC+“1”，“1”固定
+      * 变长指令字
+        * 每次PC+“1”，“1”不固定
+  * 定长操作码指令格式
+    * 操作码的位数固定不变
+  * 扩展操作码指令格式
+    * 操作码的位数可能会改变
+* 寻址方式
+  * 有效地址的概念
+    * EA：最终要访问的地址
+  * 要寻找什么？
+    * 数据寻址
+      * 找数据——找到你要操作的数据
+    * 指令寻址
+      * 找下一条要执行的指令——取决于PC值
+  * 常见的寻址方式
+
+![](/img/ffdssdsss.png)
+
+* 数据的对齐和大/小端存放方式
+  * 数据的对齐
+    * 按边界对齐
+    * 不按边界对齐
+  * 存放方式
+    * 大端存储（更符合人类视角）
+    * 小端存储
+* CISC和RISC的基本概念
+  * 从机器级代码中可以看到显著区别
+    * 指令字是否定长
+      * RISC的指令定长，CISC的指令不定长
+    * 除了Load、Store之外，是否还有其他的指令可以访存
+      * RISC仅有Load、Store类指令，才可以访问主存
+* 高级语言程序与机器及代码之间的对应
+  * 编译器、汇编器、链接器的基本概念
+  * 选择结构语句的机器级表示
+  * 循环结构语句的机器级表示
+  * 过程（函数）调用对应的机器级表示
+
+### 解题方法
+
+* 先观察汇编语言，是x86还是MIPS？
+  * 观察是否有注释
+    * 通常来说，真题中x86汇编语言不会给太多注释（考研中默认大家懂x86）
+  * 观察指令长度是否固定
+    * x86属于CICS，指令长度不固定
+    * MIPS属于RISC，指令长度固定
+  * 观察寄存器名
+    * x86的寄存器名为eax、ebx、ecx、edx
+    * MIPS的寄存器名为R[0]、R[1]、R[2]
+* x86
+  * 先搞懂C语言
+  * 基于C语言的逻辑分析机器指令
+    * 有没有分支结构
+      * 观察有没有jxxx指令
+    * 有没有循环结构
+      * 观察有没有jxxx指令
+      * 观察有没有loopxxx指令
+    * 有没有函数调用
+      * 观察有没有call指令
+      * 观察有没有ret指令
+    * 需不需要访问函数调用参数？观察在汇编语言中如何访问调用参数
+      * 注：函数调用参数一般在[ebp+8]、[ebp+12]等位置
+    * 需不需要定义局部变量？观察在汇编语言中如何访问局部变量
+      * 注：局部变量的存储地址一般在[ebp-4]、[ebp-8]、[ebp-12]等位置
+* MIPS
+  * 先搞懂C语言
+  * 基于C语言的逻辑分析指令
+    * 有没有分支结构
+      * 观察有没有bxxx指令
+        * 注：MIPS汇编语言中，转移类指令是以b开头的，表示”branch“，即分支。指令原理与x86的jxxx相同
+    * 有没有循环结构
+      * 观察有没有bxxx指令
+    * 有没有函数调用
+      * 注：MIPS汇编语言指令通常不考函数调用，重点关注x86的函数调用
+  * 考不考流水线
+    * 对指令进行分类
+      * 五类指令，每一类指令的运行原理要搞清楚
+      * 安排指令流水线
+      * 分析数据冒险、控制冒险
+
+### 基础知识
+
+* x86汇编指令（重点关注intel格式）
+
+  * 算数、逻辑运算类指令
+    * 加减乘除、左移右移等指令
+  * 分支结构（if/else)
+    * 无条件转移（goto）
+      * jmp（无条件转移指令），类似于C原的goto
+    * 条件转移指令（if/else）
+      * cmp A,B（本质是A-B，A-B的标志位信息会存放到PSW中）
+        * 无符号数减法关注CF、ZF
+          * A==B——需满足ZF ==1
+          * A!=B——需满足ZF ==0
+          * A>=B——需满足CF==0
+          * A<=B——需满足CF==1|| ZF ==1
+          * A>B——需满足CF==0 && ZF ==0
+          * A<B——需满足CF==1
+        * 有符号数减法关注OF、SF、ZF
+          * A==B——需满足 ZF ==1
+          * A!=B——需满足ZF==0
+          * A>=B——需满足SF==OF
+          * A<=B——需满足SF!=OF || ZF ==1
+          * A>B——需满足SF==OF && ZF ==0
+          * A<B——需满足SF!=OF && ZF==0
+      * jxxx（转移指令）
+        * 转移类指令，通常采用相对寻址。用补码表示偏移量。补码的值通常意味着PC要 往前/往后 跳多少个地址（注意：偏移量的单位可能是字节，也可能是指令字长）
+        * x86属于CISC，指令字长不固定，因此转移类指令中一定是以”字节“为单位描述PC的偏移量
+  * 循环结构（for、while）
+    * 条件转移指令jxxx可以用于实现循环
+      * 注：在x86汇编语言中，循环结构通常是用jxxx指令实现的，很少使用loopxxx指令
+    * loopx指令
+      * 原理同转移指令
+  * 函数调用/返回
+    * 调用指令
+      * call< label >
+        * 当前PC值压栈保存，再修改PC的值，跳转到< label >
+        * 与无条件转移指令jmp的区别
+          * call指令会将函数返回地址（当前的PC）入栈
+    * 返回指令
+      * ret
+        * 恢复程序计数器PC，返回原函数
+
+* MIPS汇编指令
+
+  * 常见指令
+
+    * 算数、逻辑运算类指令
+      * 加
+        * OP：add
+      * 减
+        * OP：sub
+      * 乘
+        * OP：mul
+      * 除
+        * OP：div
+      * 左移
+        * OP：shl
+      * 右移
+        * OP：shr
+    * 转移类指令
+      * bxxx
+        * b开头，意思是branch
+        * 转移类指令，通常采用相对寻址。用补码表示偏移量。补码的值通常意味着PC要往前/往后跳多少个地址（注意：偏移量的单位可能是字节，也可能是指令字长）
+        * MIPS属于RISC，指令字长固定，因此转移类指令中可能会以”指令字长“为单位描述PC的偏移量
+    * Load类指令
+      * lxxx
+        * L开头，意思是load
+        * 根据读取长度不同，”xxx“部分可能会变，例如从内存中读取一个字可以使用指令lw，这里的w指”word“
+    * store类指令
+      * sxxx
+        * s开头，意思是store
+        * 根据存储长度不同，”xxx“部分可能会变，例如往内存写一个字可以使用指令sw，这里的w指”word“
+
+  * 结合五段式指令流水线考察
+
+    * 数据冒险
+      * 什么指令可能导致数据冒险
+        * 前面的指令
+          * 写某个寄存器
+            * WB，第五个段
+        * 后面的指令
+          * 读（同一个）寄存器
+            * ID，第二个段
+        * 分析思路
+          * 一条一条指令从前往后分析，如果一条指令写了某个寄存器，则观察与之相邻的后3条指令中，有没有哪条指令需要读同一个寄存器
+    * 控制冒险
+      * 什么指令可能导致控制冒险
+        * 转移类指令
+          * M，第四个段改变PC值
+          * 处理控制冒险的方法：停三个周期，再取下一条指令（IF段），就不会发生控制冒险
+        * 注：call、ret也属于转移类指令，也会在M段修改PC值
+
+    ![](/img/ffdaggggg.png)
+
+    ![](/img/194837.jpg)
+
+### x86汇编语言，AT&T和intel格式的区别
+
+* 截至目前，历年真题中都是intel格式
+
+![](/img/zpeoicuoiowrw.png)
