--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -507,6 +507,8 @@ $$
 
 ##### 算术逻辑单元（ALU）
 
+![](/img/dsacs.png)
+
 ![](/img/225001.jpg)
 
 * 控制信号是由控制单元cu发出的
@@ -516,6 +518,21 @@ $$
 * M用来表示做的是逻辑运算还是算术运算，1是逻辑运算，0是算术运算
   * S0-S3可以用来指明此次要进行的是哪一种算术运算或者哪一种逻辑运算
   * 此处有4个bit，可以对应16种状态，因此该芯片可以支持16种算术运算和16种逻辑运算
+
+![](/img/eeeeessadfsd.png)
+
+* 求补码：
+  * 把一个原码送到ALU的某一个输入端，同时给出求补码的控制信号，输出端这个地方就可以得到这个原码所对应的补码
+* 直送
+  * 不对这个数据进行任何处理，怎么进就怎么出
+* 原理
+
+![](/img/dddddsaffdsadf.png)
+
+###### 看懂ALU图示
+
+![](/img/xbafga.png)
+
 * 机器字长的真面目就是ALU算术逻辑单元里面可以支持同时输入多少个比特的信息
 * 寄存器的位数和ALU一般保持一致，也即一般寄存器的位数就是机器字长
 * 其余输入和输出信号一般是为了和其他芯片进行串联而设计的
@@ -558,6 +575,22 @@ $$
 
 ![](/img/111409.jpg)
 
+##### 异或运算的妙用
+
+![](/img/dddddddd.png)
+
+##### 门电路的变形画法
+
+![](/img/sacdfsdadf.png)
+
+##### 逻辑运算的优先级、常见公式
+
+![](/img/asdaaaaa.png)
+
+##### 逻辑门电路基础总结
+
+![](/img/vdddd.png)
+
 ##### 用门电路求偶校验位
 
 ![](/img/111756.jpg)
@@ -565,6 +598,12 @@ $$
 ##### 一位全加器
 
 ![](/img/112850.jpg)
+
+* nbit的加法可以拆解为n个1bit的加法
+
+##### nbit加法器
+
+![](/img/ddddsadfdsafdsfa.png)
 
 ##### 串行加法器
 
@@ -577,6 +616,18 @@ $$
 ![](/img/113432.jpg)
 
 这种加法器的运算速度很大程度上取决于每一位进位的产生速度
+
+* 进位信息是串行产生的，计算速度取决于进位产生和传递的速度，位数越多，运算速度越慢
+* 注：电信号到达稳态需要一定时间，因此进位产生速度会有延迟
+* 串行进位又称为行波进位，每一级进位直接依赖于前一级的进位，即进位信号是逐级形成的
+
+##### 三态门
+
+![](/img/jhfgssfd.png)
+
+![](/img/ydhtgsrfaed.png)
+
+![](/img/asdvewa.png)
 
 #### 2.2.2 并行进位加法器
 
@@ -701,6 +752,8 @@ $$
 ![](/img/224508.jpg)
 
 ![](/img/225358.jpg)
+
+![](/img/dagcxzbd.png)
 
 * 注：
   * OF: overflow flag 
