--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -9,6 +9,7 @@ index_img: /img/1920x1080 (7).jpg
 math: true
 ---
 
+
 ## 第一章 计算机系统概述
 
 ### 1.1计算机发展历程
@@ -176,7 +177,7 @@ math: true
   * 如10Hz可能是每秒钟有10个脉冲信号
 
   ![](/img/191603.jpg)
-  
+
   ![](/img/093500.jpg)
 
 $$
@@ -1845,7 +1846,7 @@ $$
 
 * 考试要求：x86汇编语言，若考察其他汇编语言题目会详细注释
 * 题目给出某段简单程序的C语言、汇编语言、机器语言表示，能结合C语言看懂汇编语言的关键语句（看懂常见指令、选择结构、循环结构、函数调用） 
-* 汇编语言、机器语言一一对应，要能结合汇编语言分析机器语言指令的格式、寻址方式
+* 汇编语言、机器语言一一对应，一条汇编语言指令对应一条机器语言指令，要能结合汇编语言分析机器语言指令的格式、寻址方式
 * 不会考：将C语言人工翻译为汇编语言或者机器语言
 
 #### 4.3.1 高级语言与机器级代码之间的对应
@@ -2007,6 +2008,8 @@ intel x86架构cpu
 
 ![](/img/001351.jpg)
 
+* loopnz和loopz比较的是最近一次进行的运算的结果
+
 #### 4.3.6 函数调用的机器级表示
 
 ![](/img/53449.jpg)
@@ -2022,6 +2025,7 @@ intel x86架构cpu
 ![](/img/001836.jpg)
 
 * return之后会删除函数的栈帧
+* 程序运行的时候，系统会为它分配一片内存区域，叫做函数调用栈
 
 ![](/img/003130.jpg)
 
@@ -2099,12 +2103,20 @@ intel x86架构cpu
 
 ![](/img/133341.jpg)
 
-* push ebp  把ebp的地址信息压栈保存到栈顶的位置
-* mov ebp，esp 把esp寄存器里面的值复制到ebp，即让ebp指向esp当前所指的位置
-  * 图中add函数的栈帧底部存储的是collar函数的基地址
-* 当函数执行结束，要返回之前，总能在当前函数的栈帧底部找到上一层函数的基地址，这样就可以回复ebp寄存器的值
+![](/img/dsaveweww.png)
+
+* enter
+  * push ebp  把ebp的地址信息压栈保存到栈顶的位置
+  * mov ebp，esp 把esp寄存器里面的值复制到ebp，即让ebp指向esp当前所指的位置
+    * 图中add函数的栈帧底部存储的是caller函数的基地址
+* 当函数执行结束，要返回之前，总能在当前函数的栈帧底部找到上一层函数的基地址，这样就可以恢复ebp寄存器的值
+* leave
+  * mov esp，ebp，把ebp的值赋值给esp，让esp和ebp指向同一个位置，即当前栈帧的底部
+  * pop ebp，让esp所指元素出栈并且写入ebp，即让ebp指向上一层函数栈帧基址，然后esp+4指向IP旧值
 * 每一个函数的栈帧底部一定是存储了它上一层函数的基地址
 * enter指令是零地址指令，指令后面不需要跟任何的操作数
+  * enter= push ebp + move ebp，esp
+* ret函数的作用是从函数的栈帧顶部找到IP寄存器旧值，并且取出这个值写入IP寄存器，也就是让程序的执行流回到call指令的后面这条指令继续往后执行
 
 ##### 函数返回时，切换栈帧的方法
 
