--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -861,6 +861,12 @@ index_img: /img/1920x1080 (37).jpg
 
 ## 指令的执行
 
+* 第四章（指令系统）是一堆指令的执行
+  * 更加宏观，不同指令之间如何配合工作，因为程序是由指令序列来完成
+  * 给一个C语言程序，然后给对应的机器语言指令或汇编语言指令，去分析这些指令序列的工作过程
+* 第五章（中央处理器）是一条指令的执行
+  * 更为微观，一般来说结合硬件电路去考察，一条指令使用硬件是如何实现的，如何实现这一条指令的功能
+
 ### 大纲
 
 * 指令系统的基本概念
