--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -1120,6 +1120,8 @@ $$
 
 ![](/img/102706.jpg)
 
+* bios的本质是ROM，而ROM和RAM共同组成了主存，ROM+RAM才是完整的贮存，如果一条指令来自开机的时候，开机的引导程序是在BIOS ROM芯片里面的，但是访问ROM的本质仍然是访问主存，所以开机的指令也是在主存当中的
+
 ##### 基本的半导体元件及原理
 
 ![](/img/95943.jpg)
