--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -873,21 +873,43 @@ index_img: /img/1920x1080 (37).jpg
 * 指令格式
   * 指令的基本格式
     * 操作码
+      
       * 指明了动作
+      
     * 操作数（可能有0~n个）
+      
+      * 来源
+        * 寄存器
+        * 主存
+        * 立即数
       * 寻址方式
         * 怎么找到这个操作数
       * 形式地址
         * 形式地址（需转成有效地址EA）
         * 指令运行时需转成有效地址EA
+      
     * 根据指令长度是否固定不变，分为两类
       * 定长指令字
+        
         * 每次PC+“1”，“1”固定
+        
       * 变长指令字
+        
         * 每次PC+“1”，“1”不固定
+        
+      * 十六进制加减快速运算
+      
+        * 加法转化为十进制，然后逢16进1，拆分为16+x，x就是剩下的位数
+        * 减法同理，不够减就借位，然后加上16再减，参考十进制
+      
+        ![](/img/220530.jpg)
+      
+        ![](/img/220740.jpg)
   * 定长操作码指令格式
+    
     * 操作码的位数固定不变
   * 扩展操作码指令格式
+    
     * 操作码的位数可能会改变
 * 寻址方式
   * 有效地址的概念
@@ -897,9 +919,24 @@ index_img: /img/1920x1080 (37).jpg
       * 找数据——找到你要操作的数据
     * 指令寻址
       * 找下一条要执行的指令——取决于PC值
+      * 肯定是根据PC值去访问主存，从主存当中找到下一条要执行的指令
   * 常见的寻址方式
 
 ![](/img/ffdssdsss.png)
+
+* 需要关注的寻址
+  * 立即寻址
+  * 直接寻址
+  * 寄存器寻址
+  * 寄存器间接寻址
+  * 相对寻址（PC+偏移量）
+    * 要修改PC值的基本都是这种寻址方式，尤其是转移类指令
+  * 变址寻址
+    * 数组问题（起始地址+偏移量）
+
+* 隐含寻址：一条指令的操作数由硬件直接找到，并没有在指令中明确指出操作数在哪个地方
+  * 如return指令
+  * 根据这个指令的规则，由硬件自动去找到要找的操作数
 
 * 数据的对齐和大/小端存放方式
   * 数据的对齐
@@ -914,6 +951,7 @@ index_img: /img/1920x1080 (37).jpg
       * RISC的指令定长，CISC的指令不定长
     * 除了Load、Store之外，是否还有其他的指令可以访存
       * RISC仅有Load、Store类指令，才可以访问主存
+      * x86可以用move
 * 高级语言程序与机器及代码之间的对应
   * 编译器、汇编器、链接器的基本概念
   * 选择结构语句的机器级表示
@@ -933,9 +971,11 @@ index_img: /img/1920x1080 (37).jpg
     * MIPS的寄存器名为R[0]、R[1]、R[2]
 * x86
   * 先搞懂C语言
+    * 一般给出的x86机器级代码，第一列是指令的许好，第二列是指令的虚拟地址，第三列是指令的机器级代码（十六进制表示），第四列是汇编语言
   * 基于C语言的逻辑分析机器指令
     * 有没有分支结构
       * 观察有没有jxxx指令
+        * 转移类指令除了操作码之外的部分，在x86语言中，就是偏移量PC的偏移量（注意取出当前指令以后PC要+“1”，偏移量是PC+"1"+偏移量）
     * 有没有循环结构
       * 观察有没有jxxx指令
       * 观察有没有loopxxx指令
