--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -2129,7 +2129,16 @@ intel x86架构cpu
 ![](/img/134545.jpg)
 
 * pop ebp
+
   * esp+4往上挪一位，栈顶元素的值会被复制到ebp，让ebp的值等于上一层函数的栈帧基址
+
+    * 之后可能再pop ip，将esp所指的指令存入ip寄存器，然后esp彻底指向上一层函数栈的栈顶
+
+    * 在某年真题中出现了cmp ebp，esp的语句，这句诗在move esp，ebp之前进行栈平衡检查的，正常情况下esp应该比ebp高4个字节（esp=ebp-4），如果esp=ebp，意味着栈帧释放过度（如多pop了数据），可能引发崩溃，此为认为添加的安全校验，非CPU比须步骤
+
+    * leave =mov esp，ebp + pop ebp
+
+      return = pop ip
 
 ![](/img/34824.jpg)
 
