--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -945,6 +945,8 @@ index_img: /img/1920x1080 (37).jpg
   * 存放方式
     * 大端存储（更符合人类视角）
     * 小端存储
+    * 大端和小端只涉及多字节数据（如16bit、32bit、64bit）在内存中的存储顺序，指的是一个数据内部字节的顺序
+      * 至于为什么指令格式是操作码+地址码，因为这是CPU指令格式的定义，与大小端存储无关，而且大小端存储针对的是《每个多字节数据》而不是整条指令
 * CISC和RISC的基本概念
   * 从机器级代码中可以看到显著区别
     * 指令字是否定长
@@ -971,16 +973,18 @@ index_img: /img/1920x1080 (37).jpg
     * MIPS的寄存器名为R[0]、R[1]、R[2]
 * x86
   * 先搞懂C语言
-    * 一般给出的x86机器级代码，第一列是指令的许好，第二列是指令的虚拟地址，第三列是指令的机器级代码（十六进制表示），第四列是汇编语言
+    * 一般给出的x86机器级代码，第一列是指令的序号，第二列是指令的虚拟地址，第三列是指令的机器级代码（十六进制表示），第四列是汇编语言
   * 基于C语言的逻辑分析机器指令
     * 有没有分支结构
       * 观察有没有jxxx指令
         * 转移类指令除了操作码之外的部分，在x86语言中，就是偏移量PC的偏移量（注意取出当前指令以后PC要+“1”，偏移量是PC+"1"+偏移量）
+        * 如果转移值是负数，要进行符号扩展到虚拟地址的位数，然后进行计算
     * 有没有循环结构
       * 观察有没有jxxx指令
       * 观察有没有loopxxx指令
     * 有没有函数调用
       * 观察有没有call指令
+        * call 函数名 函数指令的地址
       * 观察有没有ret指令
     * 需不需要访问函数调用参数？观察在汇编语言中如何访问调用参数
       * 注：函数调用参数一般在[ebp+8]、[ebp+12]等位置
@@ -1011,6 +1015,7 @@ index_img: /img/1920x1080 (37).jpg
   * 分支结构（if/else)
     * 无条件转移（goto）
       * jmp（无条件转移指令），类似于C原的goto
+      * 无条件转移的指令只有 call，return和jmp 指令
     * 条件转移指令（if/else）
       * cmp A,B（本质是A-B，A-B的标志位信息会存放到PSW中）
         * 无符号数减法关注CF、ZF
@@ -1030,6 +1035,7 @@ index_img: /img/1920x1080 (37).jpg
       * jxxx（转移指令）
         * 转移类指令，通常采用相对寻址。用补码表示偏移量。补码的值通常意味着PC要 往前/往后 跳多少个地址（注意：偏移量的单位可能是字节，也可能是指令字长）
         * x86属于CISC，指令字长不固定，因此转移类指令中一定是以”字节“为单位描述PC的偏移量
+        * 偏移量一般用补码表示
   * 循环结构（for、while）
     * 条件转移指令jxxx可以用于实现循环
       * 注：在x86汇编语言中，循环结构通常是用jxxx指令实现的，很少使用loopxxx指令
@@ -1104,3 +1110,268 @@ index_img: /img/1920x1080 (37).jpg
 * 截至目前，历年真题中都是intel格式
 
 ![](/img/zpeoicuoiowrw.png)
+
+## 指令的硬件实现
+
+* 考察具体的某一条指令在执行的过程当中，如何用硬件去实现相应的这些功能
+
+### 大纲
+
+#### CPU的功能和基础结构
+
+* CPU=控制器+数据通路
+  * 控制器，即CPU，是指令的控制部件
+  * 数据通路，是指令的执行部件，包括运算器、寄存器、数据传输的线路等
+
+#### 指令的执行过程
+
+* 取值、译码
+  * 取指令送入IR、PC+"1"
+  * CU根据IR译码，确定指令的执行时序
+* 执行
+  * 取操作数、运算、存结果
+  * 异常/终端的检测与处理（如果有的话）
+
+#### 数据通路的功能和基本结构
+
+#### 控制器的功能和基本结构
+
+#### 控制器的功能和工作原理
+
+* 硬布线控制器
+* 微程序控制器
+* 这部分2022大纲更新后考察权重被弱化
+
+#### 异常和中断机制
+
+* 异常和中断的基本概念
+* 异常和中断的分类
+* 异常和中断的检测与响应
+
+#### 指令流水线
+
+* 指令流水线的基本概念
+* 指令流水线的基本实现
+* 结构冒险、数据冒险、控制冒险的处理
+* 超标量和动态流水线的基本概念
+
+#### 多处理器基本概念
+
+* SISD、SIMD、MIMD、向量处理器的基本概念
+* 硬件多线程的基本概念
+* 多核处理器（multi-core）的基本概念
+* 共享内存多处理器（SMP）的基本概念
+
+### 解题思路
+
+#### 分析框架
+
+* 思考：一条指令的执行过程
+  * 取指阶段（所有指令在取指阶段做的事情都一样）
+    * 根据PC从主存中取指令到IR
+    * PC+“1”
+      * 可以考虑用硬件①、②实现PC+”1“
+      * 也可以考虑用硬件⑿实现PC自增
+  * 执行阶段（根据指令类别来思考）
+    * 数据传送类指令（如：mov、load、store）
+      * 关注数据从哪里流动到哪里
+        * 主存
+        * 寄存器
+        * 立即数
+    * 运算类指令
+      * 加、减
+        * 可以考虑用硬件①②
+        * 自增++、自减--可以考虑用硬件①②⑿
+      * 乘
+        * 可以考虑用硬件①③
+        * 特殊乘法，乘以2^n，可用⑾左移功能平替，也可以用①ALU的左移功能平替
+      * 除
+        * 可以考虑用硬件①④
+        * 特殊除法，除以2^n，可用⑾右移功能平替，也可用①ALU的右移功能平替
+      * 移位运算
+        * 可以考虑用硬件①⑾实现
+      * 与、或、异或等双操作数逻辑运算
+        * 可考虑用硬件①实现
+      * 非 运算
+        * 可以考虑用硬件①、⒂实现
+      * 短数→长数
+        * 带符号数位扩展可使用硬件⒀
+        * 无符号数位扩展可使用硬件⒁
+    * 转移类指令
+      * 条件转移
+        * 做条件判断时，经常用到减法生成标志位，因此可能会用到硬件①或者②
+        * 减法生成的CF、ZF、SF、OF标志位需要用”标志寄存器“存储起来
+      * 无条件转移
+      * 无论是条件转移还是无条件转移，在计算转移目标地址时，需要将”PC+偏移量”。因此可以考虑使用硬件①或者②实现这个加法运算
+* key：指令各阶段的功能，要用什么硬件部件实现？数据应该如何流动？——硬件的控制信号、连线只是实现逻辑的一种外化体现
+
+#### 如何用硬件实现指令功能
+
+* 控制硬件的信号
+
+  * XXXin
+    * 允许数据进入
+  * XXXout
+    * 允许数据出去
+  * XXXop
+    * 具体的控制信号
+
+* 常见硬件
+
+  * 操作元件（组合逻辑元件）
+
+    * ①算术逻辑单元（ALU）
+      * 实现加减乘除等算术运算、与或非等逻辑运算
+      * 注意：ALU可以支持“直送”，即不对输入数据做任何处理
+      * 控制信号：n bit，取决于ALU支持多少种运算，n bit控制信号，对应2^n种运算
+    * ②加法器（Adder）
+      * 结合第二章复习，相当于弱鸡版ALU，只能实现加法、减法
+      * 控制信号：1bit
+        * 0加1减，控制信号的值会影响CF标志位（CF=sub⊕最高位进位）
+    * ③乘法器
+      * 实现乘法运算
+    * ④除法器
+      * 实现除法运算
+    * ⑤三态门
+      * 就是一道门，可开可关
+      * 控制信号：1bit，用于控制开/关
+    * ⑥多路选择器（MUX）
+      * 有2^n路输入，通过n bit控制信号选择让其中的某一路输入通过
+      * 控制信号：n bit，取决于有多少路输入，n bit控制信号，对应2^n路
+    * ⑦译码器（Decoder）
+      * 根据n bit控制信号选择将2^n条输出线路中的某一条信号选通为1
+      * 控制信号：n bit。由译码器的n bit输入即可决定选通哪根线
+
+  * 存储元件（时序逻辑元件）
+
+    * ⑧普通寄存器
+
+      * 具有特定用途的寄存器
+        * MAR
+        * MDR
+        * IR
+        * PC
+        * FR（即标志寄存器，有的系统中称为PSW）
+      * 控制信号：允许读、允许写
+
+    * ⑨暂存寄存器
+
+      * 通常会在单总线结构中和ALU配合使用
+      * 控制信号：允许读、允许写
+
+    * ⑩通用寄存器组
+
+      * 控制信号1：允许读、允许写
+      * 控制信号2：若通用寄存器组共有2^n个寄存器，则需要n bit控制信号选择其中一个寄存器
+
+    * 注意：有的寄存器可能支持特殊功能
+
+      * ⑾带“移位功能“的寄存器
+        * 可以实现移位运算（算术左移/右移、逻辑左移/右移）
+        * 隐藏技能：用移位运算等价实现”乘/除2^n“
+      * ⑿带”自增、自检功能“的寄存器
+        * 可实现寄存器的值++、-
+        * 常见用途：有的PC寄存器带有自增功能
+      * 带其他特殊功能的寄存器
+        * ⒀带”符号扩展“功能的寄存器
+          * 可以将位数短的带符号数（补码）扩展为位数更长的带符号数（补码）
+        * ⒁带”零扩展“功能的寄存器
+          * 可以将位数短的无符号数扩展为位数更长的无符号数
+          * ⒂带”取反功能“的寄存器
+            * 可以实现全部位按位取反
+
+      
+
+#### 如何看懂注释
+
+##### 袁版注释风格（16年以后的真题）
+
+* 数据在通用寄存器组
+  * 特点：用R[i]表示，中括号内为寄存器编号
+  * eg：R[6] x R[3]→R[2]。将寄存器R6 x R3的内容写入R2
+* 数据在某个特殊名字的寄存器
+  * 特点：直接用寄存器名字表示
+  * eg：R[6]+10→PC。把寄存器R6+10的内容写入PC
+  * eg：MDR→PC。把MDR的内容写入PC
+* 数据在主存
+  * 特点：用M[addr]表示，addr为主存地址
+  * eg：R[6]→M[10086]
+    * 将R6的内容存入主存地址10086
+  * eg：R[3]<<2→M[R[6]]
+    * 将R3进行”左移两位“运算，并将结果存入R6所指的主存地址（寄存器间接寻址）
+  * eg：M[PC+10]→MDR
+    * 将PC+10指向的主存内容取到MDR
+* 特点总结
+  * 喜欢用”中括号“，中括号里边表示寄存器编号、或主存地址
+  * 要使用寄存器里的内容，不用加小括号，直接给寄存器名即可
+
+##### 唐版注释风格（16年以前的真题）
+
+* 数据在通用寄存器组
+  * 特点：箭头左边，用寄存器名加小括号，表示寄存器里的值；箭头右边表示存入某个寄存器不加小括号
+  * eg：(R6)x(R3)→R2。将寄存器R6xR3的内容写入R2
+* 数据在某个特殊名字的寄存器
+  * 特点：直接用寄存器名字表示，要使用寄存器里的值需要加小括号
+  * eg：(R6)+10→PC。把寄存器R6+10的内容写入PC
+  * eg：(MDR)→PC。把MDR的内容写入PC
+* 数据在主存
+  * 特点：用M(addr)表示，addr为主存地址
+  * eg：(R6)→M(10086)
+    * 将R6的内容存入主存地址10086（寄存器间接寻址）
+  * eg：(R3)<<2→M((R6))
+    * 将R3进行”左移两位“运算，并将结果存入R6所指的主存地址（寄存器间接寻址）
+  * eg：((PC)+10)→MDR
+    * 将PC+10指向的主存内容取到MDR
+    * 在箭头的左边表示“访问主存”时，可以不加M，用两层括号表示寄存器间接寻址
+* 特点总结
+  * 喜欢用“小括号”
+  * 箭头左边若要使用某个寄存器里的内容，必须在寄存器名字外面加小括号
+  * 箭头右边表示存入某个寄存器，不用加小括号
+
+## 指令流水线
+
+### 考研大纲要求&备考方法
+
+![](/img/dsafdsssggadg.png)
+
+* 结构冒险：由于多条指令在同一时刻争用同一资源而形成的冲突
+* 数据冒险：在一个程序中，存在必须等前一条指令执行完才能执行后一条指令的情况，则这两条指令即为数据相关
+* 控制冒险：当流水线遇到转移指令和其他改变PC值的指令而造成断流时，会引起控制相关
+
+### 结构冒险及其处理
+
+![](/img/vecxe.png)
+
+* 第一个阶段即取指阶段和第四个阶段访存阶段都需要使用到同一块Cache，因此多条指令连续执行的时候就会出现结构冒险，比如第四个始终，IF取指阶段需要访问Cache，M访存阶段也需要访问Cache
+
+![](/img/awcerwav.png)
+
+* 让后面的一条指令阻塞若干个时钟周期，直到这条指令的执行不会导致结构冒险为止。
+
+![](/img/scdadtvvweac.png)
+
+* 将Cache分为指令Cache和数据Cache，分别存储指令和数据，第四个时钟的时候IF访问指令Cache，M访问数据Cache
+
+#### 真题实战
+
+![](/img/dssss.png)
+
+![](/img/sadfa.png)
+
+* 在考研真题中，只要遇到五段式指令流水线，都可以默认在这个系统当中，它的数据Cache和指令Cache一定是分离的，不需要去考虑结构冒险的问题
+
+### 如何分析数据冒险、控制冒险
+
+![](F:\try\home\themes\fluid\source\img\htydjsrf.png)
+
+* 任何一条指令对寄存器的写操作都一定是在WB这一段
+* 任何一条指令对寄存器的读操作一定是在ID这一段
+* 会写寄存器的只有load指令和运算类指令，而且一定是在第五个段WB这个段
+* 如果前一条指令写了某个寄存器，而后一条指令在前一条指令还没协会之前，就去尝试读同一个寄存器的值，那么就会发生数据冒险
+  * 因此在分析题目的时候，需要注意观察load指令和运算类指令有没有写某一个寄存器
+  * 如果发现了这种情况，那么接下来就需要观察这两类指令的后面几条指令有没有去读同一个寄存器，如果有的话，就有可能发生数据冒险
+* 所有的指令当中，只有转移类的指令有可能会更改PC值
+
+### 数据冒险的分析和处理
+
+### 控制冒险的分析和处理
