--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -861,6 +861,8 @@ index_img: /img/1920x1080 (37).jpg
 
 ## 指令的执行
 
+![](/img/jyter.png)
+
 * 第四章（指令系统）是一堆指令的执行
   * 更加宏观，不同指令之间如何配合工作，因为程序是由指令序列来完成
   * 给一个C语言程序，然后给对应的机器语言指令或汇编语言指令，去分析这些指令序列的工作过程
@@ -1113,6 +1115,10 @@ index_img: /img/1920x1080 (37).jpg
 
 ## 指令的硬件实现
 
+![](/img/ascre.png)
+
+* 标红的是考察的重点
+
 * 考察具体的某一条指令在执行的过程当中，如何用硬件去实现相应的这些功能
 
 ### 大纲
@@ -1166,43 +1172,78 @@ index_img: /img/1920x1080 (37).jpg
 
 #### 分析框架
 
+* 直接看硬件图很容易看晕，应该从指令要干什么（取值阶段和执行阶段）出发，然后考虑哪些部件实现这些功能，数据该如何流动，然后再去硬件中找实现这些功能的硬件和电路，让数据按照规划路线流动，即从人类的视角逆推而不是按照机器的电路，建立好思路再去看线路图
+
 * 思考：一条指令的执行过程
+
   * 取指阶段（所有指令在取指阶段做的事情都一样）
+
+    ![](/img/yttre.png)
+
     * 根据PC从主存中取指令到IR
+      * PC→MAR
+      * M(MAR)→MDR（指令）→IR
     * PC+“1”
       * 可以考虑用硬件①、②实现PC+”1“
       * 也可以考虑用硬件⑿实现PC自增
+      * 注意这个“1”到底是多少，与指令字长有关，与编址方式也有关系，注意区分字节编址和字编址
+
   * 执行阶段（根据指令类别来思考）
+
     * 数据传送类指令（如：mov、load、store）
+      
+      ![](/img/cqwecr.png)
+      
       * 关注数据从哪里流动到哪里
         * 主存
+          * 读数据数据
+            * 将要读的地址写入MAR
+            * 给CU主存发出读信号
+            * 数据被读到MDR寄存器当中
+            * 把MDR里的数据转移到最终放的位置
+          * 写数据
+            * 数据放入MDR当中
+            * CU发出写信号把MDR里的值写到MAR所指的主存单元
+          * 注意：关注总线占用问题（总线是临界资源，同一时刻只能由一个设备占用，可用暂时寄存器存放数据）（安排控制信号）
         * 寄存器
         * 立即数
+      
     * 运算类指令
       * 加、减
-        * 可以考虑用硬件①②
-        * 自增++、自减--可以考虑用硬件①②⑿
+        * 可以考虑用硬件①②（ALU和加法器）
+        * 自增++、自减--可以考虑用硬件⑿（自增功能寄存器）
       * 乘
-        * 可以考虑用硬件①③
-        * 特殊乘法，乘以2^n，可用⑾左移功能平替，也可以用①ALU的左移功能平替
+        * 可以考虑用硬件①③（ALU和乘法器）
+        * 特殊乘法，乘以2^n，可用⑾（移位寄存器）左移功能平替，也可以用①ALU的左移功能平替
       * 除
-        * 可以考虑用硬件①④
-        * 特殊除法，除以2^n，可用⑾右移功能平替，也可用①ALU的右移功能平替
+        * 可以考虑用硬件①（ALU）④（除法器）
+        * 特殊除法，除以2^n，可用⑾（移位寄存器）右移功能平替，也可用①ALU的右移功能平替
       * 移位运算
-        * 可以考虑用硬件①⑾实现
+        * 可以考虑用硬件①（ALU）⑾（移位寄存器）实现
       * 与、或、异或等双操作数逻辑运算
-        * 可考虑用硬件①实现
+        * 可考虑用硬件①（ALU）实现
       * 非 运算
-        * 可以考虑用硬件①、⒂实现
+        * 可以考虑用硬件①（ALU，只需要一端有输入）、⒂（带取反功能的寄存器，在减法当中可能用到，主要按位取反）实现
       * 短数→长数
-        * 带符号数位扩展可使用硬件⒀
-        * 无符号数位扩展可使用硬件⒁
+        * （如偏移量和基值的加减）
+        * 带符号数位扩展可使用硬件⒀（带符号扩展功能的寄存器）
+        * 无符号数位扩展可使用硬件⒁（带零扩展功能的寄存器）
+      
     * 转移类指令
+      
+      ![](/img/zxcv.png)
+      
+      * 重点关注13年真题
+      
       * 条件转移
-        * 做条件判断时，经常用到减法生成标志位，因此可能会用到硬件①或者②
+        * 做条件判断时，经常用到减法生成标志位，因此可能会用到硬件①（ALU）或者②（加法器）
         * 减法生成的CF、ZF、SF、OF标志位需要用”标志寄存器“存储起来
+        * 然后jxxx指令往往根据标志位来判断是否满足条件，然后进行转移，也就是修改PC值
       * 无条件转移
-      * 无论是条件转移还是无条件转移，在计算转移目标地址时，需要将”PC+偏移量”。因此可以考虑使用硬件①或者②实现这个加法运算
+      * 无论是条件转移还是无条件转移，在计算转移目标地址时，需要将”PC+偏移量”（jxxx指令中会给地址码，地址码指明了偏移量，而且偏移量一般是补码）。因此可以考虑使用硬件①（ALU）或者②（加法器）实现这个加法运算
+        * 注意偏移量以字节还是字为单位
+          * 在CISC中不可能以指令字为单位，因为指令不定长，PC值是按字节编址
+
 * key：指令各阶段的功能，要用什么硬件部件实现？数据应该如何流动？——硬件的控制信号、连线只是实现逻辑的一种外化体现
 
 #### 如何用硬件实现指令功能
@@ -1244,42 +1285,49 @@ index_img: /img/1920x1080 (37).jpg
 
   * 存储元件（时序逻辑元件）
 
-    * ⑧普通寄存器
+    * 程序员可见的寄存器就是程序员想改什么值就改什么值的寄存器
 
+      * PC（转移类指令），普通寄存器
+    * MAR、MDR、IR、暂存寄存器对程序员不可见
+      
+    * ⑧普通寄存器
+    
       * 具有特定用途的寄存器
         * MAR
-        * MDR
-        * IR
+    * MDR
+          * 存取单位为xx位，意味着MDR为xx位
+    * IR
+          * xx位定长指令字结构→IR指令寄存器的位数是xx位
         * PC
-        * FR（即标志寄存器，有的系统中称为PSW）
+    * FR（即标志寄存器，有的系统中称为PSW）
       * 控制信号：允许读、允许写
 
     * ⑨暂存寄存器
-
-      * 通常会在单总线结构中和ALU配合使用
+    
+  * 通常会在单总线结构中和ALU配合使用
       * 控制信号：允许读、允许写
 
     * ⑩通用寄存器组
-
+    
       * 控制信号1：允许读、允许写
       * 控制信号2：若通用寄存器组共有2^n个寄存器，则需要n bit控制信号选择其中一个寄存器
-
+    
     * 注意：有的寄存器可能支持特殊功能
-
+    
       * ⑾带“移位功能“的寄存器
         * 可以实现移位运算（算术左移/右移、逻辑左移/右移）
         * 隐藏技能：用移位运算等价实现”乘/除2^n“
       * ⑿带”自增、自检功能“的寄存器
         * 可实现寄存器的值++、-
         * 常见用途：有的PC寄存器带有自增功能
-      * 带其他特殊功能的寄存器
+  * 带其他特殊功能的寄存器
         * ⒀带”符号扩展“功能的寄存器
           * 可以将位数短的带符号数（补码）扩展为位数更长的带符号数（补码）
         * ⒁带”零扩展“功能的寄存器
           * 可以将位数短的无符号数扩展为位数更长的无符号数
           * ⒂带”取反功能“的寄存器
             * 可以实现全部位按位取反
-
+    
       
 
 #### 如何看懂注释
@@ -1324,7 +1372,7 @@ index_img: /img/1920x1080 (37).jpg
     * 将PC+10指向的主存内容取到MDR
     * 在箭头的左边表示“访问主存”时，可以不加M，用两层括号表示寄存器间接寻址
 * 特点总结
-  * 喜欢用“小括号”
+  * 喜欢用“小括号”，但是箭头所指的零一表会少一层小括号
   * 箭头左边若要使用某个寄存器里的内容，必须在寄存器名字外面加小括号
   * 箭头右边表示存入某个寄存器，不用加小括号
 
@@ -1362,7 +1410,7 @@ index_img: /img/1920x1080 (37).jpg
 
 ### 如何分析数据冒险、控制冒险
 
-![](F:\try\home\themes\fluid\source\img\htydjsrf.png)
+![](/img/htydjsrf.png)
 
 * 任何一条指令对寄存器的写操作都一定是在WB这一段
 * 任何一条指令对寄存器的读操作一定是在ID这一段
@@ -1370,8 +1418,108 @@ index_img: /img/1920x1080 (37).jpg
 * 如果前一条指令写了某个寄存器，而后一条指令在前一条指令还没协会之前，就去尝试读同一个寄存器的值，那么就会发生数据冒险
   * 因此在分析题目的时候，需要注意观察load指令和运算类指令有没有写某一个寄存器
   * 如果发现了这种情况，那么接下来就需要观察这两类指令的后面几条指令有没有去读同一个寄存器，如果有的话，就有可能发生数据冒险
-* 所有的指令当中，只有转移类的指令有可能会更改PC值
+* 所有的指令当中，只有转移类的指令有可能会更改PC值，而改变PC值在转移类指令的第四个阶段即访存阶段
+* ID：读寄存器，WB：写寄存器
 
 ### 数据冒险的分析和处理
 
+![](/img/fdbe.png)
+
+![](/img/53742.jpg)
+
+* 检查往后3条指令是否读了同一个寄存器
+
+  * 如何判断一条指令是否写了某一寄存器
+    * 注释，箭头一侧是不是寄存器
+  * 如何判断一条指令是否读了某一寄存器
+    * 除了被写的寄存器之外，注释中出现的寄存器名都是要被读的
+      * 写主存的时候，其他寄存器都是读
+
+* 旁路技术如何解决数据冒险：
+
+  ![](/img/62238.jpg)
+
+  * 一般来说，任何一条指令都是在ID段读取数据，EX这一段交给ALU去运算取出来的数，等EX段执行结束之后，就得到了计算的结果，只不过这个运算结果需要等到WB第五个段的时候才会被写回寄存器
+    * 对于下一条指令来说，它需要上一条指令的运算结果去进行进一步的处理
+    * 在旁路（转发）技术的情况下，可以在上一条指令得到运算结果之后，直接用一条特殊的线路，把运算结果转发给后一条指令的ALU，由于采用了转发技术，因此在EX这个段使用的数据是正确的，因此下一条指令不需要有任何的流水线阻塞
+  * 因此如果题目中明确告诉我们采用了旁路技术或者转发技术，那么绝大多数的数据冒险都不需要产生硬件阻塞
+
+* 不能解决Load-Use数据冒险
+
+  ![](/img/163215.jpg)
+
+  ![](/img/dsfawe.png)
+
+  * load的作用是把数据从内存读到寄存器里面，load-use是指load把数据从内存读到寄存器里面，紧接着下一条指令就需要去使用寄存器里面的值
+  * 以本题为例，I2指令是load指令，会从内存里面读出数据然后写回R[s3]，然后后面紧跟的I3指令又会使用到R[s3]这个寄存器里面的值，所以I2和I3之间就形成了load-use数据冒险
+    * 而load指令读数据是在M访存阶段完成的，然后在WB段会把从内存里面读出来的这些数据写回寄存器。因此I2这条指令要M访存阶段结束后才可以从内存里面获得最终的这个数据，然后WB这个段再把数据写回R[s3]，后一条指令I3需要在EX阶段使用load指令读出来的这个数据，因此这个EX段必须安排在I2的M段之后，所以我们不得不让EX段阻塞一个时钟，等到阻塞一个时钟之后才能使用转发技术，在I2的M段把数据转发给I3的EX段
+
+![](/img/63420.jpg)
+
+![](/img/uioyo.png)
+
+#### 阻塞的实例
+
+* 2016
+
+![](/img/eqwqcqw.png)
+
+![](/img/54639.jpg)
+
+* 注意：当I3没有进入到ID这一个阶段的时候，I4是不可以进入IF这一段的，因为在I3阻塞的这几个始终之内，I3一直占用着IF这个段的硬件资源，只有他真正地进入下一段ID段，那么IF这个段的硬件资源才会被释放，给下一条指令使用。
+
+![](/img/cwecdasfcwoe.png)
+
+* 2019
+
+![](/img/iuew.png)
+
+![](/img/55045.jpg)
+
+![](/img/lpdao.png)
+
+* 前一条指令进入下一个阶段之前，会一直占用当前阶段的硬件资源
+
+#### 转发技术实例
+
+![](/img/gadaf.png)
+
+* 旁路技术如何解决数据冒险：
+
+  ![](/img/62238.jpg)
+
+  * 一般来说，任何一条指令都是在ID段读取数据，EX这一段交给ALU去运算取出来的数，等EX段执行结束之后，就得到了计算的结果，只不过这个运算结果需要等到WB第五个段的时候才会被写回寄存器
+    * 对于下一条指令来说，它需要上一条指令的运算结果去进行进一步的处理
+    * 在旁路（转发）技术的情况下，可以在上一条指令得到运算结果之后，直接用一条特殊的线路，把运算结果转发给后一条指令的ALU，由于采用了转发技术，因此在EX这个段使用的数据是正确的，因此下一条指令不需要有任何的流水线阻塞
+  * 因此如果题目中明确告诉我们采用了旁路技术或者转发技术，那么绝大多数的数据冒险都不需要产生硬件阻塞
+
+* 不能解决Load-Use数据冒险
+
+  ![](/img/163133.jpg)
+
+  ![](/img/163215.jpg)
+
+  * load的作用是把数据从内存读到寄存器里面，load-use是指load把数据从内存读到寄存器里面，紧接着下一条指令就需要去使用寄存器里面的值
+  * 以本题为例，I2指令是load指令，会从内存里面读出数据然后写回R[s3]，然后后面紧跟的I3指令又会使用到R[s3]这个寄存器里面的值，所以I2和I3之间就形成了load-use数据冒险
+    * 而load指令读数据是在M访存阶段完成的，然后在WB段会把从内存里面读出来的这些数据写回寄存器。因此I2这条指令要M访存阶段结束后才可以从内存里面获得最终的这个数据，然后WB这个段再把数据写回R[s3]，后一条指令I3需要在EX阶段使用load指令读出来的这个数据，因此这个EX段必须安排在I2的M段之后，所以我们不得不让EX段阻塞一个时钟，等到阻塞一个时钟之后才能使用转发技术，在I2的M段把数据转发给I3的EX段
+
+![](/img/dsfawe.png)
+
 ### 控制冒险的分析和处理
+
+![](/img/eawvar.png)
+
+* 转移类指令：call、return、jmp、jxxx
+
+![](/img/155624.jpg)
+
+* PC值的修改是在M访存阶段，所以如果我们能让后一条指令的执行阻塞三个时钟，让其IF取指阶段在转移类指令的第四段之后再开始，在修改PC之后，这样就可以保证后一条指令取指的动作一定是取到了正确的指令
+  * 只有修改完PC之后才能知道下一条指令真正的地址在什么地方，这样可以取执行后一条指令的IF段
+
+#### 阻塞实例
+
+![](/img/adfdsax.png)
+
+![](/img/eagda.png)
+
+![](/img/55947.jpg)
